# token-sale

./: .eslintrc  .eslintrc.json  .gitignore  README.md  babel.config.js  package.json
.parcel-cache/: data.mdb  lock.mdb
contract/: Cargo.toml
contract/src/: admin.rs  lib.rs  token_factory.rs  view.rs
public/: index.html  manifest.json
src/: .env  App.js  config.js  global.css  index.html  index.js  index.old.html  routes.js  utils.js
src/assets/: manifest.json
src/components/App/CustomizedSteppers/: index.js
src/components/App/TokenNavbar/: index.js
src/components/app/Home/: Home.js
src/components/app/Login/: Login.js
src/components/app/Notification/: Notification.js  Notification.scss
src/components/app/TokenInformation/: TokenInforamation.js  TokenInformation.js
src/components/base/FormInput/: FormInput.js
src/constants/: NotificationType.js
src/context/: index.js
src/contexts/: TokenSalesContext.js
src/examples/Sidenav/: index.js
src/examples/Tables/Table/: index.js
src/helpers/: TokenUltis.js  TokenUtils.js
src/interfaces/: Token.d.ts
src/layouts/tokenfactory/: README.md  index.js
src/layouts/tokenfactory/constants/: TokenFactory.js
src/layouts/tokenfactory/context/: TokenFactoryContext.js
src/layouts/tokenfactory/stores/: TokenFactory.store.js
src/layouts/tokensales/: config.js  index.js  utils.js
src/layouts/tokensales/constants/: NotificationType.js
src/layouts/tokensales/context/: TokenSalesContext.js
src/layouts/tokensales/stores/: TokenSales.store.js
src/stores/: Token.store.js  TokenStore.js
(+18 files in other folders)
